--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -12,8 +13,13 @@
   "dependencies": {
     "@google-cloud/speech": "^7.0.0",
     "@line/bot-sdk": "^9.7.1",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "fluent-ffmpeg": "^2.1.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.2"
   }
 }
