--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/speech": "^7.0.0",
     "@line/bot-sdk": "^9.7.1",
     "@types/fluent-ffmpeg": "^2.1.27",
