--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,36 @@
-version: "3.8"
+version: "3"
+
 services:
   app:
     build: .
     container_name: line-speech-bot
-    restart: always
     ports:
       - "8806:8806"
-    env_file:
-      - .env
+    restart: always
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8806:8806"
     volumes:
-      - ./service-account-speech-text-api.json:/app/service-account.json
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+    depends_on:
+      - app
+    restart: always
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done'"
+
+volumes:
+  certbot-etc:
+  certbot-var:
