--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,22 @@
 version: "3"
 
 services:
-  app:
+  line-speech-bot:
     build: .
     container_name: line-speech-bot
+    image: line-speech-bot:latest
+    restart: unless-stopped
+    env_file: .env
+    environment:
+      TZ: Asia/Bangkok
+      VIRTUAL_HOST: linebot.cocoa-d.net
+      LETSENCRYPT_HOST: linebot.cocoa-d.net
+      LETSENCRYPT_EMAIL: support@cocoa-d.net
     ports:
-      - "9906:9906"
-    restart: always
+      - "8806:8806"
+    networks:
+      - nginx-proxy-cocoad
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx-proxy
-    ports:
-      - "80:80"
-      - "443:443"
-      - "9906:9906"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/lib/letsencrypt
-    depends_on:
-      - app
-    restart: always
-
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/lib/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done'"
-
-volumes:
-  certbot-etc:
-  certbot-var:
+networks:
+  nginx-proxy-cocoad:
+    external: true
