--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "fluent-ffmpeg": "^2.1.3"
+    "fluent-ffmpeg": "^2.1.3",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "typescript": "^5.8.2"
