--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "typescript": "^5.8.2"
   }
 }
